# awget

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  awget  awgetd.scm  awlist.scm  configure  configure.ac  dsv-parser.scm  notify-bus.scm  protocol.scm  wget.scm
awget/: .gitignore  Makefile.am  awget.in  awget.scm  awgetd.in  awgetd.scm  awlist.scm  config.scm.in  dsv-parser.scm  notify-bus.scm  rpc.x  wget.scm
etc/: init.gentoo
src/: awget  awget.scm  awgetd.scm  awlist.scm  dsv-parser.scm  logger.scm  notify-bus.scm  protocol.scm  wget.scm
