## Process this file with autoconf to produce a configure script.
##
## Copyright (C) 2013 Artyom V. Poptsov <poptsov.artyom@gmail.com>
##
## This file is part of awget.
## 
## awget is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## awget is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with awget.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT([awget], [0.1], [poptsov.artyom@gmail.com])

AC_CONFIG_AUX_DIR([build-aux])

GUILE_FLAGS
GUILE_PROGS

AM_INIT_AUTOMAKE

AC_CONFIG_FILES([Makefile awget/Makefile])

# Generate a Makefile, based on the results.
AC_OUTPUT()
